--- a/src/SharedElement.scss
+++ b/src/SharedElement.scss
@@ -17,9 +17,13 @@
     transform-origin: top left;
 }
 
+.se-transition-element-pair {
+    position: absolute;
+}
+
 .se-transition-element-old,
 .se-transition-element-new {
-    position: fixed;
+    position: absolute;
     left: 0;
     top: 0;
     z-index: 100001;
