--- a/src/top-widgets/MusicBar.scss
+++ b/src/top-widgets/MusicBar.scss
@@ -74,7 +74,7 @@
 
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    align-items: flex-start;
     justify-content: stretch;
 
     text-align: start;
