--- a/src/top-widgets/PlayPage.scss
+++ b/src/top-widgets/PlayPage.scss
@@ -44,7 +44,7 @@
 
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    align-items: flex-start;
     justify-content: flex-end;
     flex-shrink: 1;
 }
@@ -65,4 +65,7 @@
     overflow: hidden;
     box-sizing: border-box;
     flex-shrink: 0;
+
+    width: 18rem;
+    height: 18rem;
 }
