--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,9 @@ body {
 .content-container {
     position: relative;
     flex-grow: 1;
+
+    display: flex;
+    flex-direction: row;
 }
 
 @media (prefers-color-scheme: dark) {
